<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:fillViewport="true"
    tools:context=".SignUpActivity">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true">

    <!--<Button
        android:id="@+id/selectphoto_button_register"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/edittext_rounded"
        android:text="Añadir Foto"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/selectphoto_imageview_register"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:civ_border_width="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/selectphoto_button_register"
        app:layout_constraintEnd_toEndOf="@+id/selectphoto_button_register"
        app:layout_constraintStart_toStartOf="@+id/selectphoto_button_register"
        app:layout_constraintTop_toTopOf="@+id/selectphoto_button_register" />-->

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_edit_text_height"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/edittext_rounded"
        android:hint="@string/login_email"
        android:inputType="textEmailAddress"
        android:paddingLeft="@dimen/login_edit_text_space"
        android:paddingRight="@dimen/login_edit_text_space"
        android:textSize="@dimen/login_text_size"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_edit_text_height"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/edittext_rounded"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/login_edit_text_space"
        android:paddingRight="@dimen/login_edit_text_space"
        android:textSize="@dimen/login_text_size"
        app:layout_constraintBottom_toTopOf="@+id/editTextConfirmPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_edit_text_height"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/edittext_rounded"
        android:hint="@string/login_confirm_password"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/login_edit_text_space"
        android:paddingRight="@dimen/login_edit_text_space"
        android:textSize="@dimen/login_text_size"
        app:layout_constraintBottom_toTopOf="@+id/buttonSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_button_xl_height"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="150dp"
        android:background="@drawable/button_ripple_bg"
        android:text="@string/login_sign_up"
        android:textColor="@color/colorPrimaryText"
        android:textSize="@dimen/login_text_xl_size"
        app:layout_constraintBottom_toTopOf="@+id/buttonGoLogIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />




            <Button
                android:id="@+id/buttonGoLogIn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_button_xl_height"
                android:background="@drawable/button_ripple"
                android:text="@string/login_go_login"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/login_text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
